# telegram-forwarder

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/telegram_forwarder/adapters/: __init__.py
tests/: test_dummy.py
